--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 bytes = "1.4.0"
 prost = "0.11"
+serde_json = "1.0.95"
+serde = { version = "1.0.159", features = ["derive"] }
 
 [build-dependencies]
 prost-build = "0.11"
