--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytes = "1.4.0"
 prost = "0.11"
 serde_json = "1.0.95"
 serde = { version = "1.0.159", features = ["derive"] }
+clap = "4.3.11"
 
 [build-dependencies]
 prost-build = "0.11"
